--- a/src/Components/headerfooter.css
+++ b/src/Components/headerfooter.css
@@ -42,6 +42,10 @@
   width: 100%;
   height: 570px;
 }
+#slider {
+  height: 25rem;
+  overflow: hidden;
+}
 main hr {
   color: rgb(172, 169, 169);
 }
